Add JVM options to optimize application execution within the container.